--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="page">
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="matrix image">
     <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
@@ -54,7 +54,7 @@
           <input class="task__input" type="text">
           <button class="task__button task__button_edit">Edit</button>
           <button class="task__button task__button_del">
-            <img class="task__del-img" src="./remove.svg" alt="delete Icon">
+            <img class="task__del-img" src="./remove.svg" alt="delete icon">
           </button>
         </li>
       </ul>
