--- a/index.html
+++ b/index.html
@@ -19,27 +19,26 @@
       <h3 class="title">Add Item</h3>
       <div class="task">
         <input class="task__input task__input_add" type="text">
-        <button class="task__button">Add</button>
+        <button class="task__button task__button_add">Add</button>
       </div>
     </section>
     <section class="section section_todo">
       <h3 class="title">Todo</h3>
-      <ul class="task-list">
+      <ul class="task-list task-list_todo">
         <li class="task">
           <input class="task__checkbox" type="checkbox">
           <label class="task__label">Pay Bills</label>
           <input class="task__input" type="text">
-          <button class="task__button task__edit-button">Edit</button>
-          <button class="task__button task__del-button">
+          <button class="task__button task__button_edit">Edit</button>
+          <button class="task__button task__button_del">
             <img class="task__del-img" src="./remove.svg" alt="delete icon">
           </button>
         </li>
         <li class="task task_edit-mode">
           <input class="task__checkbox" type="checkbox">
-          <!-- <label class="task__label">Go Shopping</label> -->
           <input class="task__input" type="text" value="Go Shopping">
-          <button class="task__button task__edit-button">Save</button>
-          <button class="task__button task__del-button">
+          <button class="task__button task__button_edit">Save</button>
+          <button class="task__button task__button_del">
             <img class="task__del-img" src="./remove.svg" alt="delete icon">
           </button>
         </li>
@@ -60,7 +59,7 @@
       </ul>
     </section>
   </main>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
