--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body class="page">
   <header class="header">
     <img class="header__img" src="./eisenhower-matrix.jpg" alt="matrix image">
-    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
-      Want more details?
-    </a>
+    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
     <section class="section section_add">
