--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </li>
         <li class="task task_edit-mode">
           <input class="task__checkbox" type="checkbox">
-          <input class="task__input" type="text" value="Go Shopping">
+          <label class="task__label">Go Shopping</label>
+          <input class="task__input" type="text">
           <button class="task__button task__button_edit">Save</button>
           <button class="task__button task__button_del">
             <img class="task__del-img" src="./remove.svg" alt="delete icon">
@@ -44,7 +45,7 @@
       <h3 class="title">Completed</h3>
       <ul class="task-list task-list_completed">
         <li class="task">
-          <input class="task__checkbox" type="checkbox" checked="">
+          <input class="task__checkbox" type="checkbox" checked>
           <label class="task__label">See the Doctor</label>
           <input class="task__input" type="text">
           <button class="task__button task__button_edit">Edit</button>
