refactor(extended-1.2): update media with alt

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input class="task__input" type="text">
           <button class="task__button task__edit-button">Edit</button>
           <button class="task__button task__del-button">
-            <img class="task__del-img" src="./remove.svg">
+            <img class="task__del-img" src="./remove.svg" alt="remove image">
           </button>
         </li>
         <li class="task task_edit-mode">
@@ -38,7 +38,7 @@
           <input class="task__input" type="text" value="Go Shopping">
           <button class="task__button task__edit-button">Save</button>
           <button class="task__button task__del-button">
-            <img class="task__del-img" src="./remove.svg">
+            <img class="task__del-img" src="./remove.svg" alt="remove image">
           </button>
         </li>
       </ul>
@@ -52,7 +52,7 @@
           <input class="task__input" type="text">
           <button class="task__button task__button_edit">Edit</button>
           <button class="task__button task__button_del">
-            <img class="task__del-img" src="./remove.svg">
+            <img class="task__del-img" src="./remove.svg" alt="remove image">
           </button>
         </li>
       </ul>
