--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     </section>
     <section class="section section_todo">
       <h3 class="title">Todo</h3>
-      <ul class="task-list">
+      <ul class="task-list task-list_todo">
         <li class="task">
           <input class="task__checkbox" type="checkbox">
           <label class="task__label">Pay Bills</label>
           <input class="task__input" type="text">
-          <button class="task__button task__edit-button">Edit</button>
-          <button class="task__button task__del-button">
+          <button class="task__button task__button_edit">Edit</button>
+          <button class="task__button task__button_del">
             <img class="task__del-img" src="./remove.svg" alt="remove image">
           </button>
         </li>
         <li class="task task_edit-mode">
           <input class="task__checkbox" type="checkbox">
-          <!-- <label class="task__label">Go Shopping</label> -->
-          <input class="task__input" type="text" value="Go Shopping">
-          <button class="task__button task__edit-button">Save</button>
-          <button class="task__button task__del-button">
+          <label class="task__label">Go Shopping</label>
+          <input class="task__input" type="text">
+          <button class="task__button task__button_edit">Save</button>
+          <button class="task__button task__button_del">
             <img class="task__del-img" src="./remove.svg" alt="remove image">
           </button>
         </li>
