--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="matrix image">
     <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
