fix(extended-2.1): fix class name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h3 class="title">Add Item</h3>
       <div class="task">
         <input class="task__input task__input_add" type="text">
-        <button class="task__button">Add</button>
+        <button class="task__button task__button_add">Add</button>
       </div>
     </section>
     <section class="section section_todo">
