--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="matrix image">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
@@ -26,7 +26,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove image">
         </button>
       </li>
       <li class="edit-mode"><input type="checkbox">
@@ -34,7 +34,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove image">
         </button>
       </li>
     </ul>
@@ -46,7 +46,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove image">
         </button>
       </li>
     </ul>
