--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <img src="./remove.svg" alt="remove image">
           </button>
         </li>
-        <li class="edit-mode"><input type="checkbox">
+        <li class="edit-mode">
+          <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
