--- a/index.html
+++ b/index.html
@@ -5,57 +5,57 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="matrix image">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </header>
-  <main class="main">
-    <section id="top-section">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
-      </div>
-    </section>
-    <section>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove image">
-          </button>
-        </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove image">
-          </button>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove image">
-          </button>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <script src="app.js"></script>
+<body class="page">
+<header class="header">
+  <img class="header__img" src="./eisenhower-matrix.jpg" alt="matrix image">
+  <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+</header>
+<main class="main">
+  <section class="section section_add">
+    <label class="title">Add Item</label>
+    <div class="task">
+      <input class="task__input task__input_add" type="text">
+      <button class="task__button task__button_add">Add</button>
+    </div>
+  </section>
+  <section class="section section_todo">
+    <h3 class="title">Todo</h3>
+    <ul class="task-list task-list_todo">
+      <li class="task">
+        <input class="task__checkbox" type="checkbox">
+        <label class="task__label">Pay Bills</label>
+        <input class="task__input" type="text">
+        <button class="task__button task__button_edit">Edit</button>
+        <button class="task__button task__button_del">
+          <img class="task__del-img" src="./remove.svg" alt="remove image">
+        </button>
+      </li>
+      <li class="task task_edit-mode">
+        <input class="task__checkbox" type="checkbox">
+        <label class="task__label">Go Shopping</label>
+        <input class="task__input" type="text">
+        <button class="task__button task__button_edit">Save</button>
+        <button class="task__button task__button_del">
+          <img class="task__del-img" src="./remove.svg" alt="remove image">
+        </button>
+      </li>
+    </ul>
+  </section>
+  <section class="section section_complete">
+    <h3 class="title">Completed</h3>
+    <ul class="task-list task-list_completed">
+      <li class="task">
+        <input class="task__checkbox" type="checkbox" checked="">
+        <label class="task__label">See the Doctor</label>
+        <input class="task__input" type="text">
+        <button class="task__button task__button_edit">Edit</button>
+        <button class="task__button task__button_del">
+          <img class="task__del-img" src="./remove.svg" alt="remove image">
+        </button>
+      </li>
+    </ul>
+  </section>
+</main>
+<script src="app.js"></script>
 </body>
 </html>
