refactor(extended-1.1): change label to h3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </header>
 <main class="main">
   <section class="section section_add">
-    <label class="title">Add Item</label>
+    <h3 class="title">Add Item</h3>
     <div class="task">
       <input class="task__input task__input_add" type="text">
       <button class="task__button task__button_add">Add</button>
