refactor(no rule): add value

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li class="task task_edit-mode">
         <input class="task__checkbox" type="checkbox">
         <label class="task__label">Go Shopping</label>
-        <input class="task__input" type="text">
+        <input class="task__input" type="text" value="Go Shopping">
         <button class="task__button task__button_edit">Save</button>
         <button class="task__button task__button_del">
           <img class="task__del-img" src="./remove.svg" alt="remove image">
